--- a/src/TelaCadTutor.form
+++ b/src/TelaCadTutor.form
@@ -78,7 +78,7 @@
                               </Group>
                               <Group type="102" attributes="0">
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="dataNascimentoInputText" pref="122" max="32767" attributes="0"/>
+                                  <Component id="dataNascimentoInputText" max="32767" attributes="0"/>
                               </Group>
                               <Group type="102" attributes="0">
                                   <EmptySpace max="-2" attributes="0"/>
@@ -89,7 +89,7 @@
                           <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="9" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="242" max="-2" attributes="0"/>
@@ -244,7 +244,7 @@
           <SubComponents>
             <Component class="javax.swing.JLabel" name="jLabel7">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Foto Cliente"/>
+                <Property name="text" type="java.lang.String" value="Foto Tutor(a)"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="botaoProcurar">
